# flask-tutorial

./: Dockerfile  LICENSE  MANIFEST.in  docker-compose.yml  setup.cfg
.github/workflows/: docker-build-push.yml  python-package.yml
src/flaskr/: __init__.py
src/flaskr/static/: style.css
