[metadata]
name = flaskr-ansucato
version = 0.0.1
author = Andrew Sucato
author_email = asucato2@gmail.com
description = Flask tutorial application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asucato2/flask-tutorial
project_urls =
    Bug Tracker = https://github.com/asucato2/flask-tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    src